--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Paxful Trade Test App" />
-    <link rel="apple-touch-icon" href="project-logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Paxful Trade App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<head>
+  <meta charset="utf-8"/>
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="theme-color" content="#000000"/>
+  <meta name="description" content="Paxful Trade Test App"/>
+  <link rel="apple-touch-icon" href="project-logo.png"/>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800 subset=cyrillic" rel="stylesheet">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/favicons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/images/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/assets/images/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/images/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/images/favicons/favicon-192x192.png">
+  <meta name="msapplication-TileColor" content="#6b33a7">
+  <meta name="msapplication-TileImage" content="/assets/images/favicons/ms-icon-144x144.png">
+  <meta name="msapplication-square70x70logo" content="/assets/images/favicons/ms-icon-70x70.png">
+  <meta name="msapplication-square150x150logo" content="/assets/images/favicons/ms-icon-150x150.png">
+  <meta name="msapplication-square310x310logo" content="/assets/images/favicons/ms-icon-310x310.png">
+  <meta name="msapplication-wide310x150logo" content="/assets/images/favicons/ms-icon-310x350.png">
+  <meta name="theme-color" content="#6b33a7">
+  <title>Paxful Trade App</title>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
